force-app/main/default/objects/Orders__c/Orders__c.object-meta.xml
<CustomObject>
    <label>Orders</label>
    <nameField>
        <label>Orders Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>