force-app/main/default/objects/Orders__c/fields/Menu_Item__c.field-meta.xml
<CustomField>
    <fullName>Menu_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Menu Item</label>
    <referenceTo>Menu_Item__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>