force-app/main/default/objects/Orders__c/fields/Order_Placing_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Order_Placing_Date_Time__c</fullName>
    <formula>NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Placing Date/Time</label>
    <type>DateTime</type>
</CustomField>