force-app/main/default/objects/Orders__c/fields/Selected_Menu_Items__c.field-meta.xml
<CustomField>
    <fullName>Selected_Menu_Items__c</fullName>
    <label>Selected Menu Items</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dal Makhani</fullName>
            </value>
            <value>
                <fullName>Gulab Jamun</fullName>
            </value>
            <value>
                <fullName>Kheer</fullName>
            </value>
            <value>
                <fullName>Pakoras</fullName>
            </value>
            <value>
                <fullName>Palak Paneer</fullName>
            </value>
            <value>
                <fullName>Paneer Tikka</fullName>
            </value>
            <value>
                <fullName>Paneer Tikka Masala</fullName>
            </value>
            <value>
                <fullName>Rasgulla</fullName>
            </value>
            <value>
                <fullName>Samosas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>