force-app/main/default/objects/Orders__c/validationRules/Menu_Item_Availability.validationRule-meta.xml
<ValidationRule>
    <fullName>Menu_Item_Availability</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( Menu_Item__r.Availability__c )</errorConditionFormula>
    <errorMessage>This menu item is currently unavailable. Please choose another item.</errorMessage>
</ValidationRule>