force-app/main/default/objects/Orders__c/validationRules/Menu_Item_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Menu_Item_Quantity</fullName>
    <active>true</active>
    <description>Throw an error if a user selects quantity as 0 or negative</description>
    <errorConditionFormula>Quantity__c &lt;= 0</errorConditionFormula>
    <errorMessage>Quantity must be greater than zero.</errorMessage>
</ValidationRule>